include/snail.h

/* Allocator */

/* `free_fn` receives the size and alignment originally requested through the
 * Zig allocator adapter. It may ignore either value when the backing allocator
 * does not require them. */
typedef void *(*SnailAllocFn)(void *ctx, size_t size, size_t alignment);
typedef void (*SnailFreeFn)(void *ctx, void *ptr, size_t size, size_t alignment);
typedef struct {
    SnailAllocFn alloc_fn;
    SnailFreeFn free_fn;
    void *ctx;
} SnailAllocator;
/* Value types */

typedef struct {
    float min_x, min_y, max_x, max_y;
} SnailBBox;
typedef struct {
    float x, y, w, h;
} SnailRect;
typedef struct {
    float data[16];
} SnailMat4;
typedef struct {
    const char *data;
    size_t len;
} SnailString;
typedef struct {
    float xx, xy, tx;
    float yx, yy, ty;
} SnailTransform2D;
typedef struct {
    SnailTransform2D transform;
    float tint[4];
} SnailOverride;
typedef struct {
    size_t start;
    size_t count;
} SnailRange;
typedef struct {
    size_t shape_count;
} SnailShapeMark;
/* Opaque resource key value. Literal integers remain valid numeric keys and
 * round-trip through result APIs as the same integer. Named and derived keys
 * use the high bits internally; treat non-literal keys as opaque values. */
typedef uint64_t SnailResourceKey;
typedef struct {
    SnailResourceKey atlas_key;
    SnailResourceKey paint_key;
    bool has_paint_key;
} SnailTextResourceKeys;
typedef struct {
    const SnailTextBlob *blob;
    SnailTextResourceKeys resources;
    SnailOverride override_value;
    bool has_override;
} SnailTextDraw;
typedef struct {
    const SnailPathPicture *picture;
    SnailResourceKey key;
    SnailRange range;
    SnailOverride override_value;
    bool has_range;
    bool has_override;
} SnailPathPictureDraw;
typedef struct {
    uint64_t identity;
    uint64_t layout;
    uint64_t content;
} SnailResourceStamp;
#define SNAIL_RESOURCE_CAPACITY_GROWABLE 0
#define SNAIL_RESOURCE_CAPACITY_EXACT 1
typedef struct {
    size_t curve_bytes_used;
    size_t curve_bytes_allocated;
    size_t band_bytes_used;
    size_t band_bytes_allocated;
    size_t layer_info_bytes_used;
    size_t layer_info_bytes_allocated;
    size_t image_bytes_used;
    size_t image_bytes_allocated;
} SnailResourceFootprint;
typedef struct {
    uint64_t generation;
    uint32_t active_atlas_pages_resident;
    uint32_t active_atlas_layers_allocated;
    uint32_t atlas_pages_resident;
    uint32_t atlas_layers_allocated;
    uint32_t active_image_layers_resident;
    uint32_t active_image_layers_allocated;
    uint32_t image_layers_resident;
    uint32_t image_layers_allocated;
} SnailResourceCacheStats;
typedef struct {
    SnailResourceFootprint footprint;
    size_t upload_bytes;
    size_t upload_curve_bytes;
    size_t upload_band_bytes;
    size_t upload_layer_info_bytes;
    size_t upload_image_bytes;
    size_t changed_bytes;
    size_t changed_key_count;
    bool requires_cache_rebuild;
} SnailResourceUploadPlanSummary;
typedef struct {
    uint16_t advance_width;
    int16_t lsb;
    SnailBBox bbox;
} SnailGlyphMetrics;
typedef struct {
    int16_t ascent, descent, line_gap;
} SnailLineMetrics;
typedef struct {
    int16_t underline_position;
    int16_t underline_thickness;
    int16_t strikethrough_position;
    int16_t strikethrough_thickness;
} SnailDecorationMetrics;
typedef struct {
    int16_t x_size;
    int16_t y_size;
    int16_t x_offset;
    int16_t y_offset;
} SnailScriptMetrics;
typedef struct {
    float x;
    float y;
    float font_size;
} SnailScriptTransform;
typedef struct {
    float cell_width, line_height;
} SnailCellMetrics;
typedef struct {
    float embolden;
    float skew_x;
} SnailSyntheticStyle;
typedef struct {
    const uint8_t *data;
    size_t len;
    int weight;
    bool italic;
    bool fallback;
    SnailSyntheticStyle synthetic;
} SnailFaceSpec;
typedef struct {
    int weight;
    bool italic;
} SnailFontStyle;
typedef struct {
    uint16_t face_index;
    uint16_t glyph_id;
    float x_offset, y_offset;
    float x_advance, y_advance;
    uint32_t source_start, source_end;
} SnailShapedGlyph;
typedef struct {
    float baseline_x, baseline_y;
    float em;
} SnailTextPlacement;
typedef struct {
    float pixel_width;
    float pixel_height;
    /* Explicit color encoding for this target.
     * attachment_encoding describes how the current attachment interprets
     * fragment outputs.
     *
     * stored_pixel_encoding describes the encoding expected in the final stored
     * pixels. For normal sRGB displays, both fields are
     * SNAIL_COLOR_ENCODING_SRGB. */
    int attachment_encoding;
    int stored_pixel_encoding;
} SnailTargetSurface;
typedef struct {
    int32_t x;
    int32_t y;
    uint32_t w;
    uint32_t h;
} SnailPixelRect;
typedef struct {
    int backdrop_kind;
    float clear_color[4];
    int region_kind;
    SnailPixelRect region_rect;
    int intermediate_format;
} SnailLinearResolve;
typedef struct {
    int subpixel_order;
    int fill_rule;
    /* Exponent applied to analytic coverage after edge evaluation.
     * 1.0 is identity; values below 1.0 strengthen antialiased edges and
     * values above 1.0 lighten them. */
    float coverage_exponent;
} SnailRasterOptions;
typedef struct {
    SnailMat4 mvp;
    SnailTargetSurface surface;
    SnailRasterOptions raster;
} SnailDrawState;
typedef struct {
    SnailDrawState state;
    int resolve_kind;
    SnailLinearResolve linear_resolve;
} SnailDrawPass;
typedef struct {
    int fill_rule;
    int subpixel_order;
    bool output_srgb;
    float coverage_exponent;
    uint32_t layer_base;
} SnailCoverageDrawState;
#define SNAIL_PAINT_SOLID 0
#define SNAIL_PAINT_LINEAR 1
#define SNAIL_PAINT_RADIAL 2
#define SNAIL_PAINT_IMAGE 3
/* Paint / style types */

typedef struct {
    float start_x, start_y, end_x, end_y;
    float start_color[4], end_color[4];
    int extend;
} SnailLinearGradient;
typedef struct {
    float center_x, center_y, radius;
    float inner_color[4], outer_color[4];
    int extend;
} SnailRadialGradient;
typedef struct {
    const SnailImage *image;
    SnailTransform2D uv_transform;
    float tint[4];
    int extend_x, extend_y;
    int filter;
} SnailImagePaint;
typedef struct {
    int kind;
    float paint_solid[4];
    SnailLinearGradient paint_linear;
    SnailRadialGradient paint_radial;
    SnailImagePaint paint_image;
} SnailPaint;
typedef struct {
    SnailTextPlacement placement;
    SnailPaint fill;
} SnailTextAppendOptions;
typedef struct {
    float advance_x, advance_y;
    bool missing;
} SnailTextAppendResult;
typedef struct {
    uint32_t x_26_6;
    uint32_t y_26_6;
} SnailTrueTypeHintPpem;
typedef struct {
    size_t glyph_count;
    float advance_x, advance_y;
} SnailTrueTypeHintRunStats;
typedef struct {
    SnailPaint paint;
} SnailFillStyle;
typedef struct {
    SnailPaint paint;
    float width;
    int cap, join;
    float miter_limit;
    int placement;
} SnailStrokeStyle;